@@ -379,20 +379,6 @@ name|cayenne
 operator|.
 name|map
 operator|.
-name|DbRelationship
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|map
-operator|.
 name|EntityResolver
 import|;
 end_import
@@ -589,10 +575,6 @@ specifier|protected
 name|String
 name|storageEngine
 decl_stmt|;
-specifier|protected
-name|boolean
-name|supportsFkConstraints
-decl_stmt|;
 specifier|public
 name|MySQLAdapter
 parameter_list|(
@@ -676,11 +658,6 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
-name|setSupportsFkConstraints
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
 name|setSupportsUniqueConstraints
 argument_list|(
 literal|true
@@ -690,20 +667,6 @@ name|setSupportsGeneratedKeys
 argument_list|(
 literal|true
 argument_list|)
-expr_stmt|;
-block|}
-name|void
-name|setSupportsFkConstraints
-parameter_list|(
-name|boolean
-name|flag
-parameter_list|)
-block|{
-name|this
-operator|.
-name|supportsFkConstraints
-operator|=
-name|flag
 expr_stmt|;
 block|}
 annotation|@
@@ -1485,134 +1448,6 @@ argument_list|(
 literal|')'
 argument_list|)
 expr_stmt|;
-block|}
-comment|// if FK constraints are supported, we must add indices to all FKs
-comment|// Note that according to MySQL docs, FK indexes are created
-comment|// automatically when
-comment|// constraint is defined, starting at MySQL 4.1.2
-if|if
-condition|(
-name|supportsFkConstraints
-condition|)
-block|{
-for|for
-control|(
-name|DbRelationship
-name|r
-range|:
-name|entity
-operator|.
-name|getRelationships
-argument_list|()
-control|)
-block|{
-if|if
-condition|(
-name|r
-operator|.
-name|getJoins
-argument_list|()
-operator|.
-name|size
-argument_list|()
-operator|>
-literal|0
-operator|&&
-name|r
-operator|.
-name|isToPK
-argument_list|()
-operator|&&
-operator|!
-name|r
-operator|.
-name|isToDependentPK
-argument_list|()
-condition|)
-block|{
-name|sqlBuffer
-operator|.
-name|append
-argument_list|(
-literal|", KEY ("
-argument_list|)
-expr_stmt|;
-name|Iterator
-argument_list|<
-name|DbAttribute
-argument_list|>
-name|columns
-init|=
-name|r
-operator|.
-name|getSourceAttributes
-argument_list|()
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-name|DbAttribute
-name|column
-init|=
-name|columns
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
-name|sqlBuffer
-operator|.
-name|append
-argument_list|(
-name|quotingStrategy
-operator|.
-name|quotedName
-argument_list|(
-name|column
-argument_list|)
-argument_list|)
-expr_stmt|;
-while|while
-condition|(
-name|columns
-operator|.
-name|hasNext
-argument_list|()
-condition|)
-block|{
-name|column
-operator|=
-name|columns
-operator|.
-name|next
-argument_list|()
-expr_stmt|;
-name|sqlBuffer
-operator|.
-name|append
-argument_list|(
-literal|", "
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|quotingStrategy
-operator|.
-name|quotedName
-argument_list|(
-name|column
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-name|sqlBuffer
-operator|.
-name|append
-argument_list|(
-literal|")"
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 block|}
 block|}
 comment|/** 	 * Appends AUTO_INCREMENT clause to the column definition for generated 	 * columns. 	 */
