@@ -19,46 +19,6 @@ end_package
 
 begin_import
 import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|DatabaseMetaData
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|ResultSet
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|SQLException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|sql
-operator|.
-name|Statement
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -112,6 +72,46 @@ operator|.
 name|di
 operator|.
 name|Inject
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|DatabaseMetaData
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|ResultSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|SQLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|sql
+operator|.
+name|Statement
 import|;
 end_import
 
@@ -189,11 +189,6 @@ literal|null
 return|;
 block|}
 comment|// if InnoDB is used as a default engine, allow PK
-name|boolean
-name|supportFK
-init|=
-literal|false
-decl_stmt|;
 name|String
 name|adapterStorageEngine
 init|=
@@ -265,18 +260,6 @@ name|adapterStorageEngine
 operator|=
 name|storageEngine
 expr_stmt|;
-name|supportFK
-operator|=
-name|storageEngine
-operator|.
-name|toUpperCase
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|"INNODB"
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 block|}
@@ -300,13 +283,6 @@ name|getName
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|adapter
-operator|.
-name|setSupportsFkConstraints
-argument_list|(
-name|supportFK
-argument_list|)
-expr_stmt|;
 name|adapter
 operator|.
 name|setStorageEngine
